--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".SecondActivity">
         </activity>
+<!--        <user-permission android:name="android.permission.INTERNET"/>-->
     </application>
 
 </manifest>
